# pico-midi-host

./: .gitmodules  CMakeLists.txt  README.md  main.c  make.sh  tusb_config.h
